# fastapi_solo

./: .gitignore  README.md  pyproject.toml  pytest.ini  rag.ipynb
.github/workflows/: main.yml
example/: main.py
example/api/: __init__.py
example/api/v1/: __init__.py  messages.py  polys.py  posts.py  tags.py
example/api/v1/async_api/: messages.py  polys.py  posts.py  tags.py
example/models/: __init__.py  message.py  poly.py  post.py  tag.py
example/schemas/: __init__.py  message.py  poly.py  post.py  tag.py
example/scripts/: console.py  console.sh
fastapi_solo/: __init__.py  dependencies.py  exc.py
fastapi_solo/aio/: __init__.py  database.py  dependencies.py  inject.py  monkeypatch.py  solipsist.py  testing.py  utils.py
fastapi_solo/db/: __init__.py  database.py  queryable.py
fastapi_solo/router/: __init__.py  router.py  solipsist.py
fastapi_solo/serialization/: schema_models.py  schemas.py
fastapi_solo/utils/: config.py  db.py  inject.py  misc.py  openstruct.py  pagination.py  testing.py
scripts/: pytest_coverage.sh  start_example.sh
tests/: conftest.py
tests/mock/: async_router.py  models.py  router.py  schemas.py
tests/spec/: async_database_test.py  async_inject_test.py  async_router_test.py  async_utils_test.py  database_test.py  inject_test.py  query_model_test.py  router_test.py  schema_test.py  utils_test.py
